src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Product_Correspondence_Name__c</fullName>
        <description>Removes any text that are held in brackets from the product name</description>
        <formula>IF
(
FIND(&quot;(&quot;,Name )=0, Name, LEFT(Name , FIND(&quot;(&quot;,Name ) -1)
)</formula>
        <inlineHelpText>Removes any text that are held in brackets from the product name</inlineHelpText>
        <label>Product Correspondence Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID_Reporting__c</fullName>
        <description>Displays the Product ID on reports as the standard field does not display</description>
        <formula>Id</formula>
        <inlineHelpText>Displays the Product ID on reports as the standard field does not display</inlineHelpText>
        <label>Product ID (Reporting)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Media__c</fullName>
        <description>Lists the Meida on which the product is distributed</description>
        <label>Product Media</label>
        <picklist>
            <picklistValues>
                <fullName>Laminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A5 Booklet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updates Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <description>Owner of the product - does not link to a contact as some owners may not have Salesforce accounts</description>
        <inlineHelpText>Who owns this product?</inlineHelpText>
        <label>Product Owner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Revenue_Code__c</fullName>
        <description>Stores a Finance Revenue Code for the Product</description>
        <label>Product Revenue Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_State__c</fullName>
        <label>Product State</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Text1__c</fullName>
        <description>Field to store the value from [PRODUCT].[PROD_TEXT1] in Course Booker</description>
        <label>Product Text1</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>18001 Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5* Audit Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accident Invest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising: A5 Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising: Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising: Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising: Special Positions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asbestos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behave Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bespoke E-learning Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC Guide Single Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC Guide Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Directory Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert in COSHH RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert in DSE RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert in Fire RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert in Manual Handling RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert in RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert in Supervising Staff Safely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CertOSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined Audit Initial Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ComplyWise Annual Licence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control of Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Work</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_has_Commission__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used for reporting - does not feed into any development (as of 2011-02-06)</description>
        <label>Reporting: Product has Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this product is a publication subscription product</inlineHelpText>
        <label>Publication Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCP_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drives workflow that selects Subscription checkbox to govern renewal reminder emails</description>
        <inlineHelpText>Tick if this subscription product is an RCP Product</inlineHelpText>
        <label>RCP Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renew_at_this_price__c</fullName>
        <inlineHelpText>If the product is used in a subscription renew the product always at this price.</inlineHelpText>
        <label>Renew at this price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Dimension_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to dimension 1 object and holds the dimension code for the renewal of subscription products</description>
        <inlineHelpText>Dimension 2 value for renewals of this product</inlineHelpText>
        <label>Renewal Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Products (Renewal Dimension 1)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Dimension_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to dimenstion 2 object and holds the dimension code for the renewal of subscription products</description>
        <inlineHelpText>Dimensiion 2 value for renewals of this product</inlineHelpText>
        <label>Renewal Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Products (Renewal Dimension 2)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Multiplier__c</fullName>
        <description>On Opportunity Product, the list price from the attached Price Book is multiplied by this field to give the Renewal Price. If this field is blank, Renewal Price is not populated, and the subscription renews at the current List Price from the appropriate Price Book. NOTE E-Delivery algorithm priced products will apply multiplier to algorithm price</description>
        <inlineHelpText>If populated, multiplied by appropriate list price (or algorithm price) to produce renewal price</inlineHelpText>
        <label>Renewal Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Sales_Category__c</fullName>
        <inlineHelpText>Used purely for reporting - does not drive any values elsewhere</inlineHelpText>
        <label>Reporting: Sales Category</label>
        <picklist>
            <picklistValues>
                <fullName>Audit / Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tangible Goods</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Time_Period__c</fullName>
        <defaultValue>14</defaultValue>
        <description>Number of days for sales to agree dates with customer before events time out</description>
        <inlineHelpText>Sales Provision date period</inlineHelpText>
        <label>Request Time Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Require_DOB_on_DCForm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if you want to get DOB of delegates on Delegate Capture Form at the time of  training</description>
        <inlineHelpText>Check this if you want to get DOB of delegates on Delegate Capture Form at the time of  training</inlineHelpText>
        <label>Require DOB on Delegate Capture Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Events_Team_To_Admin_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this box if the events team needs to be informed when opportunity gets to customer approved.  Fire workflow - Special Event Opportunity At Customer Approved</description>
        <inlineHelpText>Tick this box if the events team needs to be informed when opportunity gets to customer approved.  Fire workflow - Special Event Opportunity At Customer Approved</inlineHelpText>
        <label>Requires Events Team To Admin Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Sales_Manager_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the product requires Sales Manager Approval (i.e. In-Company Events and Audits)</inlineHelpText>
        <label>Requires Sales Manager Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUSA_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to populate subscription type on subscription and subscription line</description>
        <inlineHelpText>Tick this box if this product is a JOMC Engage SUSA product</inlineHelpText>
        <label>SUSA Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_Management_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this products is a Safety Management product this should be ticked. If you tick this field after the product has been used on a Subscription Line you MUST update all subscription lines using this product to refresh the data.</inlineHelpText>
        <label>Safety Management Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Under_Licence_Subscription_Prod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes this is a subscription product for services we offer under licence such as Audit, Training and Auditor and Trainer Approval Registration</description>
        <inlineHelpText>Tick this if this product is a subscription product for services we offer under licence such as Audit, Training and Auditor and Trainer Approval Registration</inlineHelpText>
        <label>Services Under Licence Subscription Prod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to feed automatic generation of Subscriptions and Subscription Lines</description>
        <inlineHelpText>Should sales of this product generate Subscriptions and Subscription Lines?</inlineHelpText>
        <label>Subscription Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <description>Holds URL for any associated surveys</description>
        <inlineHelpText>Enter full url of survey here i.e. https://www.getfeedback.com/r/l7oTQERe</inlineHelpText>
        <label>Survey URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tools_Membership_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this products is a tools membership product this should be ticked.</inlineHelpText>
        <label>Tools Membership Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trainer_Day_Rate__c</fullName>
        <description>Default Trainer Day Rate for cost calculation at the event level</description>
        <inlineHelpText>What is the default Trainer Day Rate for this product?</inlineHelpText>
        <label>Trainer Day Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Charge_Day_1__c</fullName>
        <defaultValue>99</defaultValue>
        <description>Minimum number of days at which Fee 1 will be charged (the lowest rate)</description>
        <inlineHelpText>Minimum number of days at which Fee 1 will be charged (the lowest rate)</inlineHelpText>
        <label>Transfer Charge Day 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Charge_Day_2__c</fullName>
        <defaultValue>28</defaultValue>
        <description>Minimum number of days at which Fee 2 will be charged</description>
        <inlineHelpText>Minimum number of days at which Fee 2 will be charged</inlineHelpText>
        <label>Transfer Charge Day 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Charge_Day_3__c</fullName>
        <defaultValue>14</defaultValue>
        <description>Minimum number of days at which Fee 3 will be charged</description>
        <inlineHelpText>Minimum number of days at which Fee 3 will be charged</inlineHelpText>
        <label>Transfer Charge Day 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Charge_Fee_1__c</fullName>
        <defaultValue>0.1</defaultValue>
        <description>Percentage for calculating transfer fee (lowest rate)</description>
        <inlineHelpText>Lowest percentage for calculating transfer fee - will apply if transfer takes place before Days 1</inlineHelpText>
        <label>Transfer Charge Fee 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transfer_Charge_Fee_2__c</fullName>
        <defaultValue>0.1</defaultValue>
        <description>Percentage for calculating transfer fee</description>
        <inlineHelpText>Percentage for calculating transfer fee - will apply if transfer takes place after Days 1 and before Days 2</inlineHelpText>
        <label>Transfer Charge Fee 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transfer_Charge_Fee_3__c</fullName>
        <defaultValue>0.25</defaultValue>
        <description>Percentage for calculating transfer fee</description>
        <inlineHelpText>Percentage for calculating transfer fee - will apply if transfer takes place after Days 2 and before Days 3</inlineHelpText>
        <label>Transfer Charge Fee 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transfer_Charge_Fee_Final__c</fullName>
        <defaultValue>1.0</defaultValue>
        <description>Percentage for calculating transfer fee</description>
        <inlineHelpText>Percentage for calculating transfer fee - will apply if transfer takes place after Days 3</inlineHelpText>
        <label>Transfer Charge Fee Final</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transfer_Fee_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to Transfer Fee product used when this product is transferred. This product is added to the cancellation Fee opportunity created during the transfer process</description>
        <inlineHelpText>Links to Transfer Fee product used when this product is transferred.</inlineHelpText>
        <label>Transfer Fee Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Transfer Fee Product)</relationshipLabel>
        <relationshipName>TransferFeeProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UKAS_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes this is a UKAS Product, this information is used in validation rules to ensure UKAS Opps are created correctly</description>
        <inlineHelpText>If this is a UKAS Product Check this box</inlineHelpText>
        <label>UKAS Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voucher_product_codes__c</fullName>
        <inlineHelpText>The product codes used to create vouchers</inlineHelpText>
        <label>Voucher product codes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Dimension_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds alternate Dimension 2 information for products sold on the website. The sale of a membership can be attributed to 2 dimension codes depending on whether it is a renewal or new, therefore we cannot put dimension code on product. This field allows the webservice to insert the dimension for a new membership sold online. Code checks first dim2 field if blank uses this one.</description>
        <inlineHelpText>Enter Dimension 2 information in this field for website sales when dimention 2 field is blank.</inlineHelpText>
        <label>Web Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Products (WEBDimension 2)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website_Product_Information__c</fullName>
        <description>URL to our corporate website where product specific information is stored</description>
        <inlineHelpText>Link to web page for this product</inlineHelpText>
        <label>Website Product Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a product is sold on the website this should be ticked.</description>
        <inlineHelpText>When a product is sold on the website this should be ticked.</inlineHelpText>
        <label>Website Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Text__c</fullName>
        <inlineHelpText>Text for Welcome Letter / JI</inlineHelpText>
        <label>Welcome Text</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Product in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODAIncludeInIncomeSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated: Include in Income Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInputTaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products (Purchase Tax Code)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPurchaseAnalysisAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Analysis Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products (Purchase Analysis Account)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesRevenueAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The general ledger account to which sales revenues for this product be posted.</description>
        <label>Sales Revenue Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxRule__c</fullName>
        <label>External Sales Tax Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt for Qualifying Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Email__c</fullName>
        <label>Deprecated: Email</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>All_Publication_Subscription_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication_Subscription__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Publication Subscription Products</label>
    </listViews>
    <listViews>
        <fullName>E_Delivery_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Complywise</value>
        </filters>
        <label>E-Delivery Products</label>
    </listViews>
    <listViews>
        <fullName>Event_Products_Active</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Maximum_Attendees__c</columns>
        <columns>Minimum_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Event</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Event Products (Active)</label>
    </listViews>
    <listViews>
        <fullName>General_Products_Active</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.General</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>General Products (Active)</label>
    </listViews>
    <listViews>
        <fullName>In_Active_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PK_CB_PROD_ID__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>In-Active Products</label>
    </listViews>
    <listViews>
        <fullName>Migrated_Products_View</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Welcome_Text__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PK_CB_PROD_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Migrated Products View</label>
    </listViews>
    <listViews>
        <fullName>Subscription_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Memberships and Subscriptions</value>
        </filters>
        <label>Subscription Products</label>
    </listViews>
    <listViews>
        <fullName>Subscription_Products_Active</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Subscription</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Subscription Products (Active)</label>
    </listViews>
    <listViews>
        <fullName>Temp</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>In_Company_Day_Rate_Applies__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Advisory,Audit</value>
        </filters>
        <filters>
            <field>In_Company_Day_Rate_Applies__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Temp</label>
    </listViews>
    <listViews>
        <fullName>Temp2</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PK_CB_PROD_ID__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
        </filters>
        <label>Temp2</label>
    </listViews>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Record type for Training (Public and In-Company), Audit, and Advisory</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <description>Record type for General Products,Tangible Goods, and Special Events and Ceremonies</description>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subscription</fullName>
        <active>true</active>
        <description>Record type for Memberships and other Subscription Products</description>
        <label>Subscription</label>
    </recordTypes>
    <validationRules>
        <fullName>Dimension_2_for_LMS_subs_should_be_blank</fullName>
        <active>true</active>
        <description>LMS dim 2 codes are handled in code to distinguish between New, Existing and consolidated customers.  FinanceHelper.cls.  This rule was put in to prevent confusion whereby product.dim 2 is changed but not reflected on subsequently created invoice lines</description>
        <errorConditionFormula>IF( E_Delivery_Subscription__c &amp;&amp; NOT(ISBLANK(Dimension_2__c)), true, false)</errorConditionFormula>
        <errorDisplayField>Dimension_2__c</errorDisplayField>
        <errorMessage>LMS dim 2 codes are handled in code to distinguish between New, Existing and Consolidated customers, therefore should be left blank on the product record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Products_must_have_Dimension_2</fullName>
        <active>false</active>
        <description>All Subscription products must have a Dimension 2 code.</description>
        <errorConditionFormula>IF(Subscription_Product__c = true &amp;&amp;  ISBLANK(Dimension_2__c), true, false)</errorConditionFormula>
        <errorDisplayField>Dimension_2__c</errorDisplayField>
        <errorMessage>You cannot have a subscription product without a Dimension 2 code.</errorMessage>
    </validationRules>
</CustomObject>